# facet-toml

./: CHANGELOG.md  Cargo.toml  README.md
src/deserialize/: error.rs  mod.rs  to_scalar.rs
src/serialize/: array_of_tables.rs  mod.rs
tests/: benchmark_repro.rs  option_test.rs  vec_array_of_tables.rs
tests/deserialize/: basic.rs  map.rs  option.rs  scalar.rs  struct_.rs  vec_struct.rs
tests/serialize/: basic.rs  enum_.rs  list.rs  mod.rs  scalar.rs  struct_.rs  vec_struct.rs
